--- a/src/pages/hero/hero.css
+++ b/src/pages/hero/hero.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
 .hero {
     width: 100%;
     height: 85vh;
-    background-image: url('../../../public/assets/hero.png');
+    background-image: url('../../assets/hero.png');
     background-position: right;
     background-size: contain;
     background-repeat: no-repeat;
